@@ -21,9 +21,10 @@
 #define ELEM_ID_MATRIX(x, y, c) ((y)*(c)+(x)) 
 #define ELEM_ID_HALF_MATRIX(x, y, c) ((y)*(FFT_HALF(c))+(x))
 #endif
+#include <math.h>
 
 gboolean freq_multiply(gdouble *, gdouble *, gdouble *, gdouble *, gint, gint);
-gboolean getH_lowpass_gaussian(gdouble *, gdouble *, gint);
+gboolean getH_lowpass_gaussian(gdouble *, gdouble *, gint, gint, gint);
 
 gboolean
 freq_multiply(gdouble *Xr, gdouble *Xi, gdouble *Hr,
@@ -85,4 +86,21 @@ freq_multiply(gdouble *Xr, gdouble *Xi, gdouble *Hr,
   g_free(Yr);
   g_free(Yi);
   return TRUE;
+}
+
+gboolean
+getH_lowpass_gaussian(gdouble *Hr, gdouble *Hi, gint width, gint height,
+                      gint cutoff)
+{
+  gint x, y;
+  for (x=0; x<FFT_HALF(width); x++)
+    {
+      for (y=0; y<height; y++)
+        {
+          Hi[ELEM_ID_HALF_MATRIX(x, y, width)] = 0;
+          Hr[ELEM_ID_HALF_MATRIX(x, y, width)]
+            = exp(0 - (x*x+y*y)/2/(cutoff*cutoff));
+        }
+    }
+  retrun TRUE;
 }
